ingress-namespace/cinder-csi.yaml
# Source: openstack-cinder-csi/templates/nodeplugin-daemonset.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: openstack-cinder-csi-nodeplugin
  namespace: kube-system
  labels:
    component: nodeplugin
    app: openstack-cinder-csi
    release: release-name
    chart: openstack-cinder-csi-2.3.0
    heritage: Helm
spec:
  selector:
    matchLabels:
      component: nodeplugin
      app: openstack-cinder-csi
      release: release-name
  template:
    metadata:
      labels:
        component: nodeplugin
        app: openstack-cinder-csi
        release: release-name
        chart: openstack-cinder-csi-2.3.0
        heritage: Helm
    spec:
      serviceAccount: csi-cinder-node-sa
      hostNetwork: true
      containers:
        - name: node-driver-registrar
          image: "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.6.2"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=2"
            - "--csi-address=$(ADDRESS)"
            - "--kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
            - name: registration-dir
              mountPath: /registration
          resources:
            {}
        - name: liveness-probe
          image: "registry.k8s.io/sig-storage/livenessprobe:v2.8.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=2"
            - --csi-address=/csi/csi.sock
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
          resources:
            {}
        - name: cinder-csi-plugin
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN"]
            allowPrivilegeEscalation: true
          image: "docker.io/k8scloudprovider/cinder-csi-plugin:latest"
          imagePullPolicy: IfNotPresent
          args:
            - /bin/cinder-csi-plugin
            - "-v=2"
            - "--endpoint=$(CSI_ENDPOINT)"
            - "--cloud-config=$(CLOUD_CONFIG)"
          ports:
            - containerPort: 9808
              name: healthz
              protocol: TCP
          # The probe
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 60
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
            - name: kubelet-dir
              mountPath: /var/lib/kubelet
              mountPropagation: "Bidirectional"
            - name: pods-probe-dir
              mountPath: /dev
              mountPropagation: "HostToContainer"
            - mountPath: /etc/cacert
              name: cacert
              readOnly: true
            - mountPath: /etc/kubernetes
              name: cloud-config
              readOnly: true
          resources:
            {}
      volumes:
        - name: socket-dir
          hostPath:
            path: /var/lib/kubelet/plugins/cinder.csi.openstack.org
            type: DirectoryOrCreate
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: Directory
        - name: kubelet-dir
          hostPath:
            path: /var/lib/kubelet
            type: Directory
        # - name: pods-cloud-data
        #   hostPath:
        #     path: /var/lib/cloud/data
        #     type: Directory
        - name: pods-probe-dir
          hostPath:
            path: /dev
            type: Directory
        - name: cloud-config
          secret:
            secretName: cloud-config

        - hostPath:
            path: /etc/cacert
          name: cacert
      affinity:
        {}
      nodeSelector:
        {}
      tolerations:
      - key: "ingress"
        operator: "Equal"
        value: "present"
        effect: "NoSchedule"
      - key: "dev"
        operator: "Equal"
        value: "present"
        effect: "NoSchedule"
---
# Source: openstack-cinder-csi/templates/controllerplugin-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: openstack-cinder-csi-controllerplugin
  namespace: kube-system
  labels:
    component: controllerplugin
    app: openstack-cinder-csi
    release: release-name
    chart: openstack-cinder-csi-2.3.0
    heritage: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      component: controllerplugin
      app: openstack-cinder-csi
      release: release-name
  template:
    metadata:
      labels:
        component: controllerplugin
        app: openstack-cinder-csi
        release: release-name
        chart: openstack-cinder-csi-2.3.0
        heritage: Helm
    spec:
      serviceAccount: csi-cinder-controller-sa
      containers:
        - name: csi-attacher
          image: "registry.k8s.io/sig-storage/csi-attacher:v4.0.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=2"
            - "--csi-address=$(ADDRESS)"
            - "--timeout=3m"
            - "--leader-election=true"
            - "--default-fstype=ext4"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
          resources:
            {}
        - name: csi-provisioner
          image: "registry.k8s.io/sig-storage/csi-provisioner:v3.4.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=2"
            - "--csi-address=$(ADDRESS)"
            - "--timeout=3m"
            - "--leader-election=true"
            - "--default-fstype=ext4"
            - "--feature-gates=Topology=true"
            - "--extra-create-metadata"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
          resources:
            {}
        - name: csi-snapshotter
          image: "registry.k8s.io/sig-storage/csi-snapshotter:v6.1.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=2"
            - "--csi-address=$(ADDRESS)"
            - "--timeout=3m"
            - "--leader-election=true"
          volumeMounts:
            - mountPath: /var/lib/csi/sockets/pluginproxy/
              name: socket-dir
          resources:
            {}
        - name: csi-resizer
          image: "registry.k8s.io/sig-storage/csi-resizer:v1.6.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=2"
            - "--csi-address=$(ADDRESS)"
            - "--timeout=3m"
            - "--handle-volume-inuse-error=false"
            - "--leader-election=true"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
          resources:
            {}
        - name: liveness-probe
          image: "registry.k8s.io/sig-storage/livenessprobe:v2.8.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=2"
            - "--csi-address=$(ADDRESS)"
          volumeMounts:
            - mountPath: /var/lib/csi/sockets/pluginproxy/
              name: socket-dir
          resources:
            {}
        - name: cinder-csi-plugin
          image: "docker.io/k8scloudprovider/cinder-csi-plugin:latest"
          imagePullPolicy: IfNotPresent
          args:
            - /bin/cinder-csi-plugin
            - "-v=2"
            - "--endpoint=$(CSI_ENDPOINT)"
            - "--cloud-config=$(CLOUD_CONFIG)"
            - "--cluster=$(CLUSTER_NAME)"
          ports:
            - containerPort: 9808
              name: healthz
              protocol: TCP
          # The probe
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 60
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
            - mountPath: /etc/cacert
              name: cacert
              readOnly: true
            - mountPath: /etc/kubernetes
              name: cloud-config
              readOnly: true
          resources:
            {}
      volumes:
        - name: socket-dir
          emptyDir:
        - name: cloud-config
          secret:
            secretName: cloud-config

        - hostPath:
            path: /etc/cacert
          name: cacert
      affinity:
        {}
      nodeSelector:
        {}
      tolerations:
      - key: "ingress"
        operator: "Equal"
        value: "present"
        effect: "NoSchedule"
